Scrollbar fix

--- a/css/web/boxes.css
+++ b/css/web/boxes.css
@@ -288,12 +288,12 @@ a[target="_blank"] svg {
 	margin-right: auto;
 }
 
-/* Chrome */
-::-webkit-scrollbar {
+
+.window-body::-webkit-scrollbar {
 	width: 5px;
 	border-left: 1px solid var(--border-table-top);
 }
-::-webkit-scrollbar-thumb {
+.window-body::-webkit-scrollbar-thumb {
 	background: #281207;
 	border-radius: 10px;
 	border-top: 1px solid var(--border-table-top);
